fix(message_bubble): move to sessionStorage and fix z-index

--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@
   bottom: 6px;
   display: none;
   pointer-events: none;
-  z-index: 10000;
+  z-index: 9998;
 }
 
 .message_bubble p{
